--- a/index.html
+++ b/index.html
@@ -1,37 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">k
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>My app note</title>
 </head>
+
 <body>
+    <!-- Menu -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+
+                <div class="myContainer" id="completedCount"></div>
+
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+
+                <div class="collapse navbar-collapse" id="navbarContent">
+
+
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <button type="button" class="myButton" data-bs-toggle="modal"
+                                data-bs-target="#mensajeModal">
+                                Add note
+                            </button>
+                        </li>
+                        
+                    </ul>
+
+
+                    <form class="d-flex ms-auto" role="search">
+                        <input type="text" id="searchInput" class="form-control me-2" placeholder="Search..."
+                            aria-label="Searchr">
+                        <button class="btn btn-outline-light" type="submit">Search</button>
+                    </form>
+
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- End menu -->
+    <!-- Modal -->
+    <div class="myModal modal fade" id="mensajeModal" tabindex="-1" aria-labelledby="mensajeModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add note</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body">
+                    <div class="mb-3 text-center">
+                        <div>Write your note</div>
+                        <textarea id="noteInput" placeholder="Write your note here" class="myTextArea"></textarea>
+                    </div>
+                </div>
+
+
+                <div class="modal-footer">
+                    <button class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                    <button id="saveButton" class="btn btn-outline-success">Save</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- End modal -->
+     
     <div class="container">
         <h1 class="text-center mt-5 mb-5 text-light">My notes</h1>
         <div class="oneContainer container">
-            <div class="myContainer" id="completedCount"></div>
-            <div class="myContainer2">
-                <button id="addButton" class="myButton">Add note</button>
-                <div class="otherContainer">
-                    <input type="text" id="searchInput" placeholder="Search notes..." class="myInput">
-                    <div class="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
-                            <title>Search</title>
-                            <path d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"></path>
-                            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448"></path>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="textareacontainer">
-                <textarea id="noteInput" placeholder="Write your note here" class="myTextArea" style="display: none;"></textarea>
-                <button id="saveButton" class="saveButton" style="display: none;">Save note                   
-                    <div class="hoverEffect">
-                        <div></div>
-                    </div>
-                </button>
-            </div>
             <div class="container">
                 <div class="row taskContainer justify-content-center" id="noteContainer">
                 </div>
@@ -42,6 +88,9 @@
 
 
     <script src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
